syntax = "proto3";
package types;

option go_package = "xtek/exchange/__SERVICE_NAME__/pb/wallet/types";
import "google/protobuf/timestamp.proto";

message TransactionBitcoin {
  enum Category {
    GENERATE = 0;
    SEND = 1;
    RECEIVE = 2;
  }
  message Detail {
    string account = 1;
    string address = 2;
    string amount = 3;
    Category category = 4;
    bool involvesWatchOnly = 5;
    string fee = 6;
    uint32 vout = 7;
  }
  string coin = 1;
  string txID = 2;
  int64 confirmations = 3;
  int64 timeReceived = 4;
  string blockHash = 5;
  int64 blockIndex = 6;
  string amount = 7;
  string fee = 8;
  repeated Detail details = 9;
}

message TransactionDepositEvent {
  string coin = 1;
  string txID = 2;
  uint64 confirmations = 3;
  uint64 timeReceived = 4;
  string blockHash = 5;
  uint64 blockIndex = 6;
  string amount = 7;
  string fee = 8;
  string address = 9;
}

enum TransactionTypes {
  T_DEPOSIT = 0;
  T_WITHDRAW = 1;
}

enum TransactionStatus {
  T_COMPLETED = 0;
  T_PENDING = 1;
  T_REJECTED = 2;
  T_CANCELLED = 3;
  T_CONFIRMED = 4;
}

message TransactionInternal {

  string id = 1;
  string txID = 2;
  string userID = 3;
  string address = 4;
  string coin = 5;
  int64 confirmations = 6;
  string amount = 7;
  string fee = 8;
  TransactionTypes type = 9;
  TransactionStatus status = 10;

  google.protobuf.Timestamp createdAt = 14;
  google.protobuf.Timestamp updatedAt = 15;
}